@@ -25,6 +25,10 @@ Changes in @NEW@:
     * ComponentRequires now handles :cil, :java, :perl, :python, and :ruby
       components in the same manner it handles :lib. (CNY-2935)
 
+  o Client Changes:
+    * Shim commitChangeSet() and getFileContents() calls now fall back to
+      network access properly
+
   o Internal Changes:
     * Reimplemented dependency freezing in C
     * DependencySet objects now store the frozen depenedency by default
